XIVY-11947 fix event sorting fix merge conflict